Edit profile + Send New request design

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -14,6 +14,7 @@
         '@PPHeaderBundle/Resources/public/css/style.sass'
         '@PPUserBundle/Resources/public/css/style.sass'
         '@PPRequestBundle/Resources/public/css/style.sass'
+        '@PPPropositionBundle/Resources/public/css/style.sass'
         '@PPMessageBundle/Resources/public/css/style.sass' %}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
     {% endstylesheets %}        
