--- a/src/AppBundle/Resources/public/css/button.sass
+++ b/src/AppBundle/Resources/public/css/button.sass
@@ -37,3 +37,11 @@ button, .button
 
 		&:active
 			background: #444
+
+	&.green
+		&:hover
+			background: #0ABC4B
+			color: white
+
+		&:active
+			background: #444
