--- a/src/PP/UserBundle/Resources/views/Profile/edit_profile_form.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/edit_profile_form.html.twig
@@ -1,9 +1,4 @@
 
-<style>
-    input{
-        color: #000;
-    }
-</style>
 <form action="{{ path('pp_user_edit')}}" {{ form_enctype(editUserForm) }} method="POST" class="editProfileForm" >
 
     {{ form_errors(editUserForm) }}
@@ -11,27 +6,24 @@
     <div class="banner">
         <div id="coverImageContainer">
         {% if currentUser.coverImage != null %}
-            <img src="{{ asset(currentUser.coverImage.webPath("1500x500")) }}" alt="{{ currentUser.coverImage.alt }}">            
-        {% endif %}       
+            <img src="{{ asset(currentUser.coverImage.webPath("1500x500")) }}" alt="{{ currentUser.coverImage.alt }}">
+        {% endif %}
         </div>
         <div class="overlay"></div>
-    </div>    
-     
-    <div class="profile-details">        
-        <a class="avatar" id="profileImageContainer" href="#" title="">          
-          <img src="{{ asset(currentUser.profilImage.webPath("70x70")) }}" alt="{{ currentUser.profilImage.alt }}">         
-        </a>
-        {{ form_widget(editUserForm.profilImage) }}
-        <output id="list"></output>
-        <h1 class="username">{{ form_row(editUserForm.name) }}</h1>
-        <p class="bio">{{ form_row(editUserForm.description) }}</p>
+    </div>
 
-        
-             <input type="submit" value="Save" />
-        
-        <a id="cancelButton" class="button follow" ng-click="profile.cancelEditProfile()" >
-            Cancel
-        </a>
+    <div class="profile-details">
+        <div class="avatar" id="profileImageContainer">
+            <img src="{{ asset(currentUser.profilImage.webPath("70x70")) }}" alt="{{ currentUser.profilImage.alt }}">
+            <div class="profile-avatar-editing">
+                {{ form_widget(editUserForm.profilImage) }}
+            </div>
+        </div>
+        <output id="list"></output>
+        <h1 class="username">{{ form_row(editUserForm.name, {'attr':  {'placeholder': 'Name'}}) }}</h1>
+        <p class="bio">{{ form_row(editUserForm.description, {'attr':  {'placeholder': 'Insert your bio here...', 'class': 'bio', 'rows': '3'}}) }}</p>
+        <input class="button green" type="submit" value="Save" />
+        <a id="cancelButton" class="button" ng-click="profile.cancelEditProfile()">Cancel</a>
 
         <ul class="details">
             <li>
@@ -41,12 +33,11 @@
             <li>
                 <strong>Followers</strong>
                 {% if currentUser.followersNb != null %}{{ currentUser.followersNb }}{% else %}0{% endif %}
-            </li>               
+            </li>
             <li class="link">
-                <a href="#" title="">{{ form_row(editUserForm.contact) }}</a>                    
+                <a href="#" title="">{{ form_row(editUserForm.contact, {'attr':  {'placeholder': 'Website'}}) }}</a>
             </li>
         </ul>
-    </div>               
-            
+    </div>
     {{ form_rest(editUserForm) }}
 </form>
