--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
@@ -11,29 +11,14 @@
 	<div class="content-slideshow">
 		<div id="propActionTop" class="action-top">
 			<div class="action-group left">
-                            <a class="icon infos" href="#"></a>
-                            {% endverbatim %}
-                            {# report and delete image request form #}
-                            {% if is_granted("ROLE_USER") %}        
-                                <form style="color: black" ng-model="popup.reportData" ng-submit="popup.postReport(proposition.id)" >
-                                    <select ng-model="popup.reportData.reasonId">
-                                    {% for reason in reportReasonList %}
-                                        <option value="{{ reason.id }}">{{ reason.name }}</option>
-                                    {% endfor %}
-                                    </select>
-                                    <textarea ng-model="popup.reportData.details">More details...</textarea>
-                                    <input type="submit" value="send report"/>
-                                </form>
-                                {{ form(reportTicketForm) }}                   
-                            {% endif %}
-                            {% verbatim %}
+                            <a class="icon infos" href="#"></a>                            
 			</div>                   
 
 			<div class="action-group center">
 				<a class="icon share" href="#"></a>
 				<a target="_self" class="icon download" href="{{ proposition.image }}" download="{{ proposition.title }}"></a>
                                 {% endverbatim %}
-				<a ng-if="!proposition.author.isAuthor" class="icon report" href=""></a>                                
+				<a ng-if="!proposition.author.isAuthor" class="icon report" href="" ng-click="popup.showReportPopup(proposition.id,2)"></a>                                
 				<a ng-if="proposition.author.isAuthor" class="icon delete" href="" ng-click="popup.patchDisable()"></a>
                                 {% verbatim %}
 			</div>                        
