--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -30,25 +30,25 @@
                 </div>
         </header>
 
-    {# ALERT BANNER #}        
-    <section id="alert-banner" class="alert-banner">
-    {# info success warning danger #}
-        <div class="content">
-            <strong id="alert-banner-strong"></strong> 
-            <span id="alert-banner-span"></span>
-        </div>
-    </section>
+        {# ALERT BANNER #}        
+        <section id="alert-banner" class="alert-banner">
+        {# info success warning danger #}
+            <div class="content">
+                <strong id="alert-banner-strong"></strong> 
+                <span id="alert-banner-span"></span>
+            </div>
+        </section>
 
-    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-    <section id="messageApp" style="display:none;" class="overlay-messages">
-        {{ render(controller("PPMessageBundle:Message:initMessageBox"))}}
-    </section>
-    {% endif %}
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+        <section id="messageApp" style="display:none;" class="overlay-messages">
+            {{ render(controller("PPMessageBundle:Message:initMessageBox"))}}
+        </section>
+        {% endif %}
 
-    <div id="containerApp">
-        <base href=" " />
-        {% block bellowHeader %}                     
-        {% endblock %}  
+        <div id="containerApp">
+            <base href=" " />
+            {% block bellowHeader %}                     
+            {% endblock %}  
             <section class="main">
                 <div class="content">
                     {% block body %}
@@ -63,24 +63,29 @@
             </section>                                        
         </div>
                         
-        {% block propositionPopup %}
-            {{ render(controller("PPPropositionBundle:Proposition:propositionPopup")) }}
-        {% endblock %}
-                
         {% include "::overlay.html.twig" %}                                              
 
         <footer>         
         </footer>
     </div>    
     
+    {% block reportPopup %}
+        {{ render(controller("PPReportBundle:Report:reportPopup")) }}
+        <div id="reportPopupApp" ng-controller="reportController as report">                
+        </div>
+    {% endblock %}
+
+    {% block propositionPopup %}        
+        {{ render(controller("PPPropositionBundle:Proposition:propositionPopup")) }}        
+    {% endblock %}
+        
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="https://code.angularjs.org/1.4.7/angular.min.js" type="text/javascript"></script>
     <script src="https://code.angularjs.org/1.4.7/angular-route.js" type="text/javascript"></script>
     <script src="https://code.angularjs.org/1.4.7/angular-sanitize.min.js"    type="text/javascript"></script>
     <script type="text/javascript" src="http://alexandrejolly.com:3000//client.js"></script>                     
     
-     {% javascripts filter='?yui_js' '@PPPropositionBundle/Resources/public/js/popupController.js'
-    %}   
+    {% javascripts filter='?yui_js' '@PPPropositionBundle/Resources/public/js/popupController.js' %}   
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
     
@@ -92,7 +97,9 @@
                                    '@PPRequestBundle/Resources/public/js/lazyLoadDirective.js' 
                                    '@PPMessageBundle/Resources/public/js/messageApp.js'
                                    '@PPMessageBundle/Resources/public/js/elastic.js'
-                                   '@PPPropositionBundle/Resources/public/js/popupController.js'
+                                   '@PPReportBundle/Resources/public/js/reportApp.js'
+                                   
+                                   
     %}   
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
