--- a/src/PP/MessageBundle/Resources/views/Message/messageBox.html.twig
+++ b/src/PP/MessageBundle/Resources/views/Message/messageBox.html.twig
@@ -4,12 +4,12 @@
 
         <div class="message-top">
             <div class="inbox-top">
-                Inbox (1 new)
+                Inbox
             <a id="searchButton" class="new-message" href=""></a>
             </div>
             <div class="chat-top">
                   <div class="chat-name" id="chatTitle"></div>
-                  <button  class="button-close">×</button>
+                  <button id="buttonCloseMessage" class="button-close">×</button>
             </div>
         </div>
 
@@ -19,8 +19,8 @@
             <div id="inboxBlock" ng-controller="inboxController as inbox" class="inbox">
                 {% endverbatim %}{{ form(getCurrentUserForm) }}{% verbatim %}
                 <ul class="list-mess">
-                    <li ng-repeat="thread in currentUser.threadList" class="message" >                    
-                        <a href="" ng-click="inbox.gotToConversation(thread)" class="open">
+                    <li ng-repeat="thread in currentUser.threadList track by $index" ng-if="thread.target.name" class="message" >                    
+                        <a href="" ng-click="inbox.gotToConversation(thread)"  ng-class="{open: thread.id == currentUser.selectedThreadId}" >
                             <div class="avatar">
                                 <img ng-src="{{ thread.target.image }}">
                             </div>
