--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="action-bottom">
-                <a class="count-vote" id="propositionUpvoteButton" href="" ng-click="popup.postPropositionVote(proposition.id)">{{ proposition.upvoteNb }}</a>
+                <a class="count-vote voded" id="propositionUpvoteButton" href="" ng-click="popup.postPropositionVote(proposition.id)">{{ proposition.upvoteNb }}</a>                                
             </div>
         </div>
 	</div>
